creacion clase personas e importacion a la estructura

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Undead Psychotic</title>
 </head>
 <body>
-    
+    <!-- Importamos al asesino -->
+    <script src="asesino.js"></script>
 </body>
 </html>
