importacion personas a la estructura

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <!-- Importamos al asesino -->
     <script src="asesino.js"></script>
+    <!-- Importamos a las personas -->
+    <script src="personas.js"></script>
 </body>
 </html>
