creamos la clase asesino y ciudadano que hereda de persona y persona que hereda de gameObject para evitar la repeticion de codigo y mejorar la organizacion del proyecto

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
         </style>
 
         <script src="utils.js"></script>
-
         <!-- importamos pixi -->
         <script src="pixi.js"></script>
         <!-- importamos la clase juego -->
         <script src="juego.js"></script>
+        <!-- importamos la clase gameObject -->
+        <script src="gameObject.js"></script>
+        <!-- importamos la clase asesino -->
         <script src="asesino.js"></script>
-        <!-- y cada conejito -->
+        <!-- importamos la clase ciudadano -->
+        <script src="ciudadano.js"></script>
+        <!-- importamos la clase personas -->
         <script src="personas.js"></script>
     </head>
     <body>
