Creacion de un nuevo archivo boid.js y vector2D.js para implementar el comportamiento de "boids" en los ciudadanos.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
             }
         </style>
 
+        <!-- importamos nuestras utilidades -->
         <script src="utils.js"></script>
+        <script src="vector2D.js"></script>
+        <script src="boid.js"></script>
         <!-- importamos pixi -->
         <script src="pixi.js"></script>
         <!-- importamos la clase juego -->
