Refactor boid logic and add police entity
Moved boid algorithms to BoidAlgorithm class and removed legacy Boid implementation. Added Policia class and integrated police and assassin entities into the game loop. Updated GameObject and Persona classes to use new boid logic. Improved animation loading and entity initialization. Enhanced separation of concerns and extensibility for future entity behaviors.

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         <script src="juego.js"></script>
         <!-- importamos la clase gameObject -->
         <script src="gameObject.js"></script>
+        <!-- importamos la clase personas -->
+        <script src="personas.js"></script>
         <!-- importamos la clase asesino -->
         <script src="asesino.js"></script>
         <!-- importamos la clase ciudadano -->
         <script src="ciudadano.js"></script>
-        <!-- importamos la clase personas -->
-        <script src="personas.js"></script>
+        <!-- importamos la clase policia -->
+        <script src="policia.js"></script>
     </head>
     <body>
         <script>
