--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
         <!-- importamos nuestras utilidades -->
         <script src="utils.js"></script>
+        <!-- importamos boid -->
+        <script src="boid.js"></script>
+        <!-- importamos el movimiento -->
+        <script src="vector2D.js"></script>
         <!-- importamos pixi -->
         <script src="pixi.js"></script>
         <!-- importamos la clase juego -->
