--- a/index.html
+++ b/index.html
@@ -34,6 +34,39 @@
             // todo empieza aca (Entry Point).
             // creamos una instancia de la clase juego
             const juego = new Juego()
+            class Persona {
+                constructor(x, y, m) {
+                    this.mass = m;
+                    this.position = createVector(x, y);
+                    this.velocity = createVector(0, 0);
+                    this.acceleration = createVector(0, 0);
+                    
+                }
+                pursue(vehicle){
+                let target = vehicle.pos.copy();
+                target.add(vehicle.velocity.mult(10));
+                fill(0, 255, 0);
+                circle(target.x, target.y, 16);
+                retun this.seek(target);
+                }
+                flee(target){
+                return this.seek(target).mult(-1);
+                }
+                seek(target){
+                    let desired = p5.Vector.sub(target, this.position);
+                    let steering = p5.Vector.sub(desired, this.velocity);
+                    this.applyForce(steering);
+                }
+                applyForce(force){
+                    let f = p5.Vector.div(force, this.mass);
+                    this.acceleration.add(f);
+                }
+                update() {
+                this.velocity.add(this.acceleration);
+                this.position.add(this.velocity);
+                this.acceleration.mult(0);
+                }
+            }
         </script>
     </body>
 </html>
