--- a/index.html
+++ b/index.html
@@ -42,49 +42,46 @@
             font-size: 20px;
         }
     </style>
-    <script src="js/celda.js"></script>
-    <script src="js/grilla.js"></script>
 
-    <script src="js/fsm/fsm.js"></script>
-    <script src="js/fsm/fsm_state.js"></script>
-    <script src="js/fsm/estados_de_animacion/idle_animation_state.js"></script>
-    <script src="js/fsm/estados_de_animacion/walk_animation_state.js"></script>
-    <script src="js/fsm/estados_de_animacion/run_animation_state.js"></script>
-    <script src="js/fsm/estados_de_animacion/pegar_animation_state.js"></script>
-    <script src="js/fsm/estados_de_animacion/convertirse_animation_state.js"></script>
-    <script src="js/fsm/estados_de_comportamiento/amigo_idle_behavior_state.js"></script>
-    <script src="js/fsm/estados_de_comportamiento/enemigo_idle_behavior_state.js"></script>
-    <script src="js/fsm/estados_de_comportamiento/amigo_en_combate_behavior_state.js"></script>
-    <script src="js/fsm/estados_de_comportamiento/enemigo_en_combate_behavior_state.js"></script>
-    <script src="js/fsm/estados_de_comportamiento/pasado_de_bando_behavior_state.js"></script>
-    <script src="js/gsap.js"></script>
+    <script src="celda.js"></script>
+    <script src="grilla.js"></script>
 
-    <script src="js/utils.js"></script>
+    <script src="fsm/fsm.js"></script>
+    <script src="fsm/fsm_state.js"></script>
+    <script src="fsm/estados_de_animacion/idle_animation_state.js"></script>
+    <script src="fsm/estados_de_animacion/walk_animation_state.js"></script>
+    <script src="fsm/estados_de_animacion/run_animation_state.js"></script>
+    <script src="fsm/estados_de_animacion/pegar_animation_state.js"></script>
+    <script src="fsm/estados_de_animacion/convertirse_animation_state.js"></script>
+    <script src="fsm/estados_de_comportamiento/amigo_idle_behavior_state.js"></script>
+    <script src="fsm/estados_de_comportamiento/enemigo_idle_behavior_state.js"></script>
+    <script src="fsm/estados_de_comportamiento/amigo_en_combate_behavior_state.js"></script>
+    <script src="fsm/estados_de_comportamiento/enemigo_en_combate_behavior_state.js"></script>
+    <script src="fsm/estados_de_comportamiento/pasado_de_bando_behavior_state.js"></script>
+
+    <script src="utils.js"></script>
 
     <!-- importamos pixi -->
-    <script src="js/pixi.js"></script>
-    <script src="js/animated-character.js"></script>
-    <script src="js/particleSystem.js"></script>
-    <script src="js/ui.js"></script>
+    <script src="pixi.js"></script>
+    <script src="animated-character.js"></script>
+    <script src="particleSystem.js"></script>
+    <script src="ui.js"></script>
     <!-- importamos el sistema de iluminación -->
-    <script src="js/sistemaDeIluminacion.js"></script>
+    <script src="sistemaDeIluminacion.js"></script>
     <!-- importamos la clase juego -->
-    <script src="js/juego.js"></script>
-    <script src="js/nivel.js"></script>
-    <script src="js/gameObject.js"></script>
-    <script src="js/entidadEstatica.js"></script>
-    <script src="js/arbol.js"></script>
-    <script src="js/poste.js"></script>
-    <script src="js/farol.js"></script>
-    <script src="js/monumento.js"></script>
-    <script src="js/auto.js"></script>
-    <script src="js/bondi.js"></script>
-    <script src="js/persona.js"></script>
-    <script src="js/protagonista.js"></script>
-    <script src="js/enemigo.js"></script>
-    <script src="js/amigo.js"></script>
-    <script src="js/civil.js"></script>
-    <script src="js/policia.js"></script>
+    <script src="juego.js"></script>
+    <script src="nivel.js"></script>
+    <script src="gameObject.js"></script>
+    <script src="entidadEstatica.js"></script>
+    <script src="arbol.js"></script>
+    <script src="poste.js"></script>
+    <script src="farol.js"></script>
+    <script src="monumento.js"></script>
+    <script src="auto.js"></script>
+    <script src="bondi.js"></script>
+    <script src="persona.js"></script>
+    <script src="ciudadano.js"></script>
+    <script src="policia.js"></script>
 </head>
 
 <body>
