Arreglo desaparicion de escenario

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <script src="auto.js"></script>
     <script src="bondi.js"></script>
     <script src="persona.js"></script>
+    <script src="asesino.js"></script>
     <script src="ciudadano.js"></script>
     <script src="policia.js"></script>
 </head>
