--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <script src="monumento.js"></script>
     <script src="auto.js"></script>
     <script src="bondi.js"></script>
+    <script src="gsap.js"></script>
     <script src="persona.js"></script>
     <script src="asesino.js"></script>
     <script src="ciudadano.js"></script>
