--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
     <!-- importamos pixi -->
     <script src="pixi.js"></script>
+    <script src="matter.js"></script>
     <script src="animated-character.js"></script>
     <script src="particleSystem.js"></script>
     <script src="ui.js"></script>
