--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
     <script src="pixi.js"></script>
     <script src="matter.js"></script>
     <script src="ui.js"></script>
+
+
+    
     <!-- importamos la clase juego -->
     <script src="juego.js"></script>
     <script src="nivel.js"></script>
@@ -77,6 +80,9 @@
     <script src="auto.js"></script>
     <script src="bondi.js"></script>
     <script src="gsap.js"></script>
+
+
+    <!-- importamos los NPCs -->
     <script src="persona.js"></script>
     <script src="asesino.js"></script>
     <script src="ciudadano.js"></script>
