--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- importamos la clase juego -->
     <script src="juego.js"></script>
     <script src="gameObject.js"></script>
+    <script src="gsap.js"></script>
+    <script src="matter.js"></script>
+    <script src="ui.js"></script>
     <!-- y cada conejito -->
     <script src="persona.js"></script>
     <script src="asesino.js"></script>
