--- a/index.html
+++ b/index.html
@@ -15,28 +15,16 @@
     <!-- importamos la clase juego -->
     <script src="juego.js"></script>
     <script src="gameObject.js"></script>
-    <script src="gsap.js"></script>
-    <script src="matter.js"></script>
-    <script src="ui.js"></script>
-    <!-- y cada conejito -->
-    <script src="persona.js"></script>
+    <!-- y cada clase de los NPC's -->
     <script src="asesino.js"></script>
-    <script src="ciudadano.js"></script>
-    <script src="policia.js"></script>
+    <script src="persona.js"></script>
 
 
 </head>
 
 <body>
     <script>
-
-
-
-        // todo empieza aca (Entry Point).
-        // creamos una instancia de la clase juego
         const juego = new Juego()
-
-
     </script>
 
 </body>
