El asesino se mueve y se crean la ley y los ciudadanos

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
             margin: 0px
         }
     </style>
-
+    <script src="gameObject.js"></script>
     <script src="utils.js"></script>
 
     <!-- importamos pixi -->
     <script src="pixi.js"></script>
+    <!-- y cada clase de los NPC's -->
+    <script src="persona.js"></script>
+    <script src="asesino.js"></script>
+    <script src="ciudadano.js"></script>
+    <script src="policia.js"></script>
     <!-- importamos la clase juego -->
     <script src="juego.js"></script>
-    <script src="gameObject.js"></script>
-    <!-- y cada clase de los NPC's -->
-    <script src="asesino.js"></script>
-    <script src="persona.js"></script>
-
 
 </head>
 
